# qdk-ec

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  publish.yaml
binar/: Cargo.toml  README.md
binar/benches/: bitmatrix_benchmark.rs
binar/bindings/python/: .gitignore  Cargo.toml  README.md  asv.conf.json  binar.pyi  pyproject.toml  stubtest_allowlist.txt
binar/src/: affine_map.rs  lib.rs  python.rs
binar/src/bit/: bitblock.rs  bitwise.rs  bitwise_for_arrays.rs  bitwise_for_slice.rs  bitwise_truncated.rs  bitwise_via_borrow.rs  bitwise_via_iter.rs  bitwise_via_std.rs  bool.rs  bool_containers.rs  mod.rs  standard_types.rs  truncated.rs  uint_arrays.rs  uint_vecs.rs  unsigned_integers.rs
binar/src/matrix/: aligned_bitmatrix.rs  bitmatrix.rs  column.rs  m4ri.rs  mod.rs  tiny_matrix.rs  transpose_kernel.rs
binar/src/vec/: aligned_vec.rs  aligned_view.rs  bitvec.rs  bitview.rs  index_set.rs  mod.rs
binar/tests/: affine_map_test.rs  bit_test.rs  bitblock_test.rs  bitmatrix_test.rs  bitvec_test.rs  uint_array_test.rs
deq/: .coveragerc  .gitignore  .pylintrc  Cargo.toml  MANIFEST.in  README.md  mypy.ini  pyproject.toml  pytest.ini  setup.py
deq/deq/: __init__.py  __main__.py
deq/deq/circuit/: __init__.py  deq.lark  mako_support.py  model.py  parser.py  transformer.py
deq/deq/cli/: __init__.py  annotate.py  canonicalize.py  inspector.py  interpret.py  jit.py  merge_errors.py  noise.py  sample.py  simulate.py  spec.py  strip_tags.py  util.py
deq/deq/compiler/: jit_compiler.py
deq/deq/errata/: errata_utils.py  logical_action.py  stim_to_locations.py
deq/deq/noise/: __init__.py  biased.py  common.py  injector.py  si1000.py  strip.py
deq/deq/proto/: compile.py
deq/deq/runtime/: __init__.py  __main__.py
deq/deq/spec/: __init__.py  canonical.py  common.py  library_equivalence.py  library_validator.py  physical_validator.py  program_equivalence.py  program_identicalness.py  program_validator.py  violations.py
deq/deq/transpiler/: check_optimizer.py  code_validation.py  compose_builder.py  jit_annotate.py  jit_library_builder.py  jit_noise_builder.py  jit_transpiler.py  program_artifacts.py  stim_constants.py
deq/deq/visual/: adaptor.py  render.py  svg_player.py  widget.py  window_trace.py
deq/deq_decoder_abi/: .gitattributes  Cargo.toml  README.md
deq/deq_decoder_abi/include/: deq_decoder.h
deq/deq_decoder_abi/reference_plugin/: Cargo.toml  cbindgen.toml  regenerate.sh
deq/deq_decoder_abi/src/: host.rs  interface.rs  lib.rs  plugin.rs
deq/deq_decoder_abi/tests/: plugin.rs
deq/deq_runtime/: Cargo.toml  README.md  build.rs  deq_runtime.pyi  pyproject.toml
deq/deq_runtime/src/: benchmark.rs  cli.rs  controller.rs  coordinator.rs  decoder.rs  jit.rs  lib.rs  main.rs  python.rs  server.rs  signal_checker.rs  simulator.rs  visualizer.rs
deq/deq_runtime/tests/: dyn_lib_decoder_test.rs  jit_cancellation_test.rs  jit_compiler_test.rs  jit_controller_test.rs  jit_controller_unit_test.rs  mock_coordinator_test.rs  mock_decoder_test.rs  monolithic_coordinator_test.rs  python_sampler_test.rs  rhai_assert_test.rs  standard_decoder_test.rs  stim_sampler_test.rs  task_counter_test.rs  window_coordinator_test.rs
deq/deq_visualizer/: .gitignore  .prettierrc  README.md  compress_js.ts  eslint.config.mjs  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.js
deq/deq_visualizer/src/: Visualizer.vue  compress.ts  lib.ts  util.test.ts  util.ts
deq/documents/: Makefile  conf.py  index.rst  make.bat
deq/documents/api/: index.rst
deq/documents/examples/: window_decoding_tutorial.ipynb  window_decoding_tutorial.py
deq/documents/tutorial/: README.md
deq/proto/: blackbox_decoder.proto  coordinator.proto  deq_bin.proto  deq_jit.proto  fastrace.proto  jit_controller.proto  server.proto  simulator.proto  static_controller.proto  util.proto  visualizer.proto  window_coordinator.proto
deq/src/: lib.rs
deq/tests/circuit/: test_annotate.py  test_annotate_keep_noise.py  test_deq.py  test_duplicate_names.py  test_imports.py  test_noise_injection.py
deq/tests/cli/: jit_test.py  merge_errors_test.py  simulate_test.py  strip_tags_test.py  util_test.py
deq/tests/compiler/: jit_compiler_test.py
deq/tests/errata/: test_logical_action.py
deq/tests/runtime/: test_runtime.py  test_sampler.py
deq/tests/spec/: canonical_test.py  library_equivalence_test.py  library_validator_test.py  physical_validator_test.py  program_equivalence_test.py  program_identicalness_test.py  program_validator_test.py
deq/tests/transpiler/: check_optimizer_test.py  check_plugin_fixtures_test.py  jit_annotate_test.py  jit_library_builder_test.py  jit_propagate_test.py  jit_transpiler_test.py  metachecks_test.py  mpp_test.py  test_code_validation.py  test_compose_repropagate.py  test_noise_conversion.py
deq/tests/visual/: test_render.py
paulimer/: Cargo.toml  README.md
paulimer/benches/: pauli_benchmark.rs  symplectic_form_benchmark.rs
paulimer/bindings/python/: .gitignore  Cargo.toml  README.md  asv.conf.json  paulimer.pyi  pyproject.toml  stubtest_allowlist.txt
paulimer/src/: binar_impls.rs  clifford.rs  lib.rs  operations.rs  pauli.rs  pauli_group.rs  python.rs  schemars.rs  serde.rs  setwise.rs  traits.rs
paulimer/src/clifford/: clifford_impl.rs  generic_algos.rs
paulimer/src/pauli/: algorithms.rs  (+4 more)
paulimer/tests/: clifford_test.proptest-regressions  clifford_test.rs  core_test.rs  pauli_group_test.proptest-regressions  pauli_group_test.rs  pauli_test.rs  serde_test.rs
pauliverse/: Cargo.toml  README.md
pauliverse/benches/: simulation_benchmark.rs
pauliverse/examples/: faulty.rs  outcome_complete.rs  outcome_free.rs  outcome_specific.rs
pauliverse/src/: action.rs  circuit.rs  faulty_simulation.rs  frame_propagator.rs  lib.rs  noise.rs  outcome_complete_simulation.rs  outcome_free_simulation.rs  outcome_specific_simulation.rs  sampling.rs  statistical_testing.rs
pauliverse/tests/: action_test.rs  faulty_simulation_test.rs  simulation_test.rs
qodec/: Cargo.toml  README.md
qodec/src/: lib.rs
(+318 files in other folders)
