[workspace]
members = [
    "binar",
    "binar/bindings/python",
    "quantum-core",
    "paulimer",
    "paulimer/bindings/python",
    "pauliverse",
]
default-members = [
    "binar",
    "quantum-core",
    "paulimer",
    "pauliverse",
]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
