[package]
name = "paulimer"
version = "0.1.0"
edition = "2021"
publish = true

[features]
python = ["dep:pyo3", "binar/python"]
serde = ["dep:serde"]
schemars = ["dep:schemars"]

[dependencies]
binar = { path = "../binar", version = "0.1.0" }
rand = "0.8"
sorted-vec = "0.8"
sorted-iter = "0.1"
once_cell = "1.21.3"
itertools = "0.14"
num-derive = "0.4.2"
num-traits = "0.2.19"
pyo3 = { version = "0.27.1", optional = true }
derive_more = { version = "2.0.1", features = [
    "deref",
    "deref_mut",
    "from",
    "into",
    "display",
    "from_str",
    "try_into",
    "try_from",
] }
serde = { version = "1.0", features = ["derive"], optional = true }
schemars = { version = "1.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
serde_json = "1.0"
jsonschema = { version = "0.29" }

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.14", features = ["criterion", "flamegraph"] }

[[bench]]
name = "pauli_benchmark"
harness = false

[[bench]]
name = "symplectic_form_benchmark"
harness = false
