[package]
name = "pauliverse"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
binar = { path = "../binar" }
paulimer = { path = "../paulimer" }
quantum-core = { path = "../quantum-core" }
rand = { version = "0.8", features = ["small_rng"] }
# SmallVec avoids heap allocation for small collections (1-4 elements) in hot paths
smallvec = "1.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
statrs = "0.18"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.14", features = ["criterion", "flamegraph"] }

[[bench]]
name = "simulation_benchmark"
harness = false