[package]
name = "pauliverse"
version = "0.1.0"
edition = "2021"
publish = true
license = "MIT"
description = "Fast stabilizer simulation"

[dependencies]
binar = { path = "../binar", version = "0.1.0" }
paulimer = { path = "../paulimer", version = "0.1.0" }
rand = { version = "0.8", features = ["small_rng"] }
# SmallVec avoids heap allocation for small collections (1-4 elements) in hot paths
smallvec = "1.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
statrs = "0.18"

[[bench]]
name = "simulation_benchmark"
harness = false