[package]
name = "qodec"
version = "0.0.0"
edition = "2024"
authors = ["Microsoft Corporation"]
description = "Reserved name for an upcoming Microsoft QDK error-correction crate. Not yet implemented."
license = "MIT"
repository = "https://github.com/microsoft/qdk-ec"
homepage = "https://github.com/microsoft/qdk-ec"
readme = "README.md"

[dependencies]
