[package]
name = "paulimer-bindings"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "paulimer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.1"
binar = { path = "../../../binar", features = ["python"] }
paulimer = { path = "../../", features = ["python"] }
pauliverse = { path = "../../../pauliverse" }
rand = "0.8.5"
derive_more = { version = "2.0.1", features = [
    "deref",
    "deref_mut",
    "from",
    "into",
    "display",
    "from_str",
    "try_into",
] }

[[test]]
name = "paulimer-python-bindings"
path = "tests/test-python-bindings.rs"
