[build-system]
requires = ["maturin>=1.2,<2.0", "setuptools_scm >= 8"]
build-backend = "maturin"

[project]
name = "paulimer"
dynamic = ["version"]
description = "Pauli and Clifford algebra for quantum computing"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Microsoft Corporation" },
]
keywords = ["quantum", "pauli", "clifford", "stabilizer", "quantum computing", "error correction"]
dependencies = ["binar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/microsoft/qdk-ec"
Repository = "https://github.com/microsoft/qdk-ec"
"Bug Tracker" = "https://github.com/microsoft/qdk-ec/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "numpy>=1.20",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.setuptools_scm]
