[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qodec"
version = "0.0.0"
description = "Reserved name for an upcoming Microsoft QDK error-correction package. Not yet implemented."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Microsoft Corporation" }]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/microsoft/qdk-ec"
Repository = "https://github.com/microsoft/qdk-ec"

[tool.setuptools.packages.find]
where = ["src"]
